# Homolipop

./: .pylintrc  Readme.txt  pyproject.toml  readme.md  readme.txt
.github/workflows/: ci.yml  docs.yml  requirements.yml
docs/: requirements.txt
docs/source/: _gen_tests.py  api.rst  conf.py  examples.rst  index.rst  sg_execution_times.rst  tests.rst
docs/source/_ext/: clean_docstrings.py  generate_tests.py
docs/source/auto_examples/: alpha_example_2d.codeobj.json  alpha_example_2d.ipynb  alpha_example_2d.py  alpha_example_2d.py.md5  alpha_example_2d.rst  alpha_example_triangle_exact.codeobj.json  alpha_example_triangle_exact.ipynb  alpha_example_triangle_exact.py  alpha_example_triangle_exact.py.md5  alpha_example_triangle_exact.rst  coboundary_mod_p.codeobj.json  coboundary_mod_p.ipynb  coboundary_mod_p.py  coboundary_mod_p.py.md5  coboundary_mod_p.rst  compare_barcodes.codeobj.json  compare_barcodes.ipynb  compare_barcodes.py  compare_barcodes.py.md5  compare_barcodes.rst  complex_closure.codeobj.json  complex_closure.ipynb  complex_closure.py  complex_closure.py.md5  complex_closure.rst  delaunay_example.codeobj.json  index.rst  (+69 more)
examples/: GALLERY_HEADER.rst  __init__.py  alpha_example_2d.py  alpha_example_triangle_exact.py  coarse_vs_persistent_homology.py  coboundary_mod_p.py  compare_barcodes.py  complex_closure.py  delaunay_example.py  mnist_two_class_concentric_rings.py  persistence_triangle_F2.py  persistence_triangle_F5.py  persistence_triangle_Z_units.py  pipeline_alpha_persistence_plot.py  pipeline_kgraph_profile_plot.py  pipeline_points_to_k0_like_plot.py  pipeline_toeplitz_k_theory_barcodes_plot.py  rings_example_swiss_roll_h1.py  rings_example_two_circles.py  sanity_toeplitz_k_theory_persistence.py  simplex_basics.py  simplicialviz_points_and_complex_3d.py
src/homolipop/: __init__.py  _types.py  alpha.py  barcodes.py  bornological_course.py  coarse.py  coboundary.py  concentric_betti_rings.py  cstar_functor.py  delaunay.py  edge_filtration.py  filtration.py  graph_filtration.py  graph_persistence_fp.py  k0_like.py  kgraph.py  kplotting.py  persistence.py  persistence_rings.py  pipeline.py  pipeline_k0_like.py  pkgraph.py  plotting.py  simplices.py  vertex_growth_filtration.py
src/robbybubble/: Alpha.py  Delaunay.py  Simplex.py  __init__.py  _types.py  coboundary.py  filtration.py  simplices.py
src/simplicialviz/: __init__.py  _types.py  plot3d.py  views.py
tests/: test_alpha_delaunay_small.py  test_alpha_triangle.py  test_build_complex.py  test_coboundary_rings.py  test_delaunay.py  test_distances.py  test_faces.py  test_faces.py   test_k0_like.py  test_persistence_edge_F2.py  test_persistence_triangle_Z_units.py  test_persistence_triangle_fields.py  test_pkgraph_small.py  test_pkgraph_trivial.py  test_simplices_basic.py  test_vertex_growth_filtration_nested.py
(+20 files in other folders)
